# moe-congestion-routing

./: .gitignore  .pre-commit-config.yaml  README.md  alps6.toml  config.sh.example  main.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
configs/data/: climblab_local.yaml  climbmix_small.yaml  climbmix_small_local.yaml
configs/train/: alflb_local.yaml  base_local.yaml  control_local.yaml  switch_local.yaml
patches/Megatron-LM/: 0001-moe-load-balance-metrics.patch  0002-log-tokens-per-sec.patch
scripts/: apply-patches.sh  build-te-local.sh  prepare_climb.py  prepare_climb.sbatch  prepare_climblab.py  run_moe_infer.py  run_moe_pretrain.py  train_moe_climblab.sbatch
src/moe_congestion_routing/: main.py  main_test.py
src/moe_congestion_routing/data/: climb.py  climb_test.py  climblab.py  climblab_test.py  config.py  config_test.py  convert.py  convert_test.py  prepare_dataset.py  prepare_dataset_test.py
src/moe_congestion_routing/training/: infer_config.py  infer_config_test.py  megatron_path.py  megatron_path_test.py  pretrain_config.py  pretrain_config_test.py
