[project]
name = "moe-congestion-routing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.23.0",
    "numpy>=2.5.1",
    "pyarrow>=25.0.0",
    "pyyaml>=6.0.3",
    "torch>=2.13.0",
]

[project.scripts]
moe-congestion-routing = "moe_congestion_routing.main:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["src"]

[tool.uv.build-backend]
source-exclude = ["**/*_test.py"]
wheel-exclude = ["**/*_test.py"]
